updated front end to respond to status codes properly

--- a/views/register-en.ejs
+++ b/views/register-en.ejs
@@ -180,7 +180,7 @@
                     </div>
 
                     <button type="submit" class="btn btn-default mrgn-rght-md" id="registerButton">Register</button>
-                    <a href="/login">Log in</a>
+                    <a href="/api/login">Log in</a>
             </form>
         </div>
 
@@ -203,7 +203,7 @@
                 <div class="col-xs-12">
                     <dl id="wb-dtmd">
                         <dt>Date modified:</dt>
-                        <dd><time property="dateModified">2023-05-24</time></dd>
+                        <dd><time property="dateModified">2023-07-07</time></dd>
                     </dl>
                 </div>
             </div>
